# logtool

./: .alias  .clean  .local  .pdm-python  MANIFEST.in  README.txt  SYMLINKS  log  pyproject.toml  requirements_test.txt  s  setup.py  tasks.py
HOLD/1.5.2/logtool/: log-pscript.py  logts.py  multiplex.py  pscript.py
HOLD/1.5.2/logtool-1.5.2.dist-info/: METADATA  RECORD  direct_url.json  entry_points.txt
HOLD/OLD/: requirements.txt  setup.py
HOLD/dev/: invoke.terminals.py.diff  merge.py.wip  pyproject.toml.save
HOLD/dev/tests-capture/: capture.py
HOLD/tests.orig/: common.py  log-file-only.sh  pscript-exit-code.sh  pscript-file-only.sh  pscript-no-such-file.sh  pscript-touch-ok.sh  script-exit-code.sh  script-file-only.sh  script-touch-ok.sh  test_retcode.py
HOLD/tests.pscript/: common.py  m-simple.py  test_log.py  test_logts.py  test_multiplex.py  test_pscript.py
issue/: w-long-attribute.txt
logtool/: __init__.py  autoflush.py  log.py  logts.py  logts.py.save  multiplex.py  pscript.py
ref/: err-app.py
scripts/: build  clean  do-install  install  log  log-runner  logts  logts-runner  p-basic  pscript-runner  python  run  test
src/logtool/: __init__.py  log.py  logts.py  multiplex.py  pscript.py
t/: common.py  log.py  retcode.py  save.py  ts.py
tests/: code-snippet.ansi  code-snippet.txt  common.py  common.py.save  conftest.py  log-error.sh  logts-simple.sh  m-simple.py  test_log.py  test_logts.py  test_logts.py.q  test_multiplex.py  test_pscript.py  test_retcode.py
